fix config inclusion

--- a/exercises/concept/city-office/.meta/config.json
+++ b/exercises/concept/city-office/.meta/config.json
@@ -3,7 +3,7 @@
       "neenjaw"
    ],
    "contributors": [],
-   "files": {:
+   "files": {
       "solution": [
          "Address.php",
          "Form.php"
