--- a/exercises/concept/sweethearts/.meta/config.json
+++ b/exercises/concept/sweethearts/.meta/config.json
@@ -2,7 +2,6 @@
   "authors": [
     "neenjaw"
   ],
-  "contributors": [],
   "files": {
     "solution": [
       "HighSchoolSweetheart.php"
@@ -14,11 +13,9 @@
       ".meta/exemplar.php"
     ]
   },
-  "language_version": ">=8.1",
-  "blurb": "Learn about love and strings!",
-  "icon": "high-school-sweethearts",
   "forked_from": [
     "elixir/high-school-sweetheart"
-  ]
+  ],
+  "icon": "high-school-sweethearts",
+  "blurb": "Learn about love and strings!"
 }
-
