--- a/exercises/concept/annalyns-infiltration/.meta/config.json
+++ b/exercises/concept/annalyns-infiltration/.meta/config.json
@@ -1,22 +1,20 @@
 {
-   "authors": [
-      "neenjaw"
-   ],
-   "contributors": [],
-   "files": {
-      "solution": [
-         "AnnalynsInfiltration.php"
-      ],
-      "test": [
-         "AnnalynsInfiltrationTest.php"
-      ],
-      "exemplar": [
-         ".meta/exemplar.php"
-      ]
-   },
-   "language_version": ">=8.1",
-   "blurb": "Learn about role playing games and boolean values!",
-   "forked_from": [
-      "fshapr/annalyns-infiltration"
-   ]
+  "authors": [
+    "neenjaw"
+  ],
+  "files": {
+    "solution": [
+      "AnnalynsInfiltration.php"
+    ],
+    "test": [
+      "AnnalynsInfiltrationTest.php"
+    ],
+    "exemplar": [
+      ".meta/exemplar.php"
+    ]
+  },
+  "forked_from": [
+    "fshapr/annalyns-infiltration"
+  ],
+  "blurb": "Learn about role playing games and boolean values!"
 }
