--- a/exercises/concept/city-office/.meta/config.json
+++ b/exercises/concept/city-office/.meta/config.json
@@ -1,24 +1,22 @@
 {
-   "authors": [
-      "neenjaw"
-   ],
-   "contributors": [],
-   "files": {
-      "solution": [
-         "Address.php",
-         "Form.php"
-      ],
-      "test": [
-         "CityOfficeTest.php"
-      ],
-      "exemplar": [
-         ".meta/exemplar/Address.php",
-         ".meta/exemplar/Form.php"
-      ]
-   },
-   "language_version": ">=8.1",
-   "blurb": "Learn about type declarations and form validation!",
-   "forked_from": [
-      "elixir/city-office"
-   ]
+  "authors": [
+    "neenjaw"
+  ],
+  "files": {
+    "solution": [
+      "Address.php",
+      "Form.php"
+    ],
+    "test": [
+      "CityOfficeTest.php"
+    ],
+    "exemplar": [
+      ".meta/exemplar/Address.php",
+      ".meta/exemplar/Form.php"
+    ]
+  },
+  "forked_from": [
+    "elixir/city-office"
+  ],
+  "blurb": "Learn about type declarations and form validation!"
 }
