--- a/exercises/concept/language-list/.meta/config.json
+++ b/exercises/concept/language-list/.meta/config.json
@@ -1,22 +1,20 @@
 {
-   "authors": [
-      "neenjaw"
-   ],
-   "contributors": [],
-   "files": {
-      "solution": [
-         "LanguageList.php"
-      ],
-      "test": [
-         "LanguageListTest.php"
-      ],
-      "exemplar": [
-         ".meta/exemplar.php"
-      ]
-   },
-   "language_version": ">=8.1",
-   "blurb": "Learn about functions and arrays!",
-   "forked_from": [
-     "clojure/tracks-on-tracks-on-tracks"
-   ]
+  "authors": [
+    "neenjaw"
+  ],
+  "files": {
+    "solution": [
+      "LanguageList.php"
+    ],
+    "test": [
+      "LanguageListTest.php"
+    ],
+    "exemplar": [
+      ".meta/exemplar.php"
+    ]
+  },
+  "forked_from": [
+    "clojure/tracks-on-tracks-on-tracks"
+  ],
+  "blurb": "Learn about functions and arrays!"
 }
