Add BinarySearchTree exercise.

--- a/config.json
+++ b/config.json
@@ -893,6 +893,14 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 5
+      },
+      {
+        "slug": "binary-search-tree",
+        "name": "Binary Search Tree",
+        "uuid": "e13c2b59-75c1-4415-a439-b548721ebdbc",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 3
       }
     ]
   },
