--- a/config.json
+++ b/config.json
@@ -38,7 +38,7 @@
       {
         "uuid": "d6b00994-36b1-4d2c-9a7f-d55f3cbdf4de",
         "slug": "sweethearts",
-        "name": "Highschool Sweetheats",
+        "name": "Highschool Sweethearts",
         "prerequisites": ["basic-syntax"],
         "concepts": ["strings"],
         "status": "beta"
