Fork and adjust Lucky Numbers concept exercise

--- a/config.json
+++ b/config.json
@@ -98,6 +98,21 @@
           "type-declaration"
         ],
         "status": "beta"
+      },
+      {
+        "uuid": "23de47c6-d020-448f-860c-cf15ffd4db17",
+        "slug": "lucky-numbers",
+        "name": "Lucky Numbers",
+        "prerequisites": [
+          "arrays",
+          "integers",
+          "strings",
+          "type-declaration"
+        ],
+        "concepts": [
+          "type-juggling"
+        ],
+        "status": "wip"
       }
     ],
     "practice": [
