Exercise is 'beta' now

--- a/config.json
+++ b/config.json
@@ -112,7 +112,7 @@
         "concepts": [
           "type-juggling"
         ],
-        "status": "wip"
+        "status": "beta"
       }
     ],
     "practice": [
