--- a/.github/workflows/configlet-generate.yml
+++ b/.github/workflows/configlet-generate.yml
@@ -27,4 +27,4 @@ jobs:
         run: configlet generate
 
       - name: Commit generated code
-        uses: stefanzweifel/git-auto-commit-action@v5
+        uses: stefanzweifel/git-auto-commit-action@8756aa072ef5b4a080af5dc8fef36c5d586e521d
