--- a/exercises/concept/lucky-numbers/.meta/config.json
+++ b/exercises/concept/lucky-numbers/.meta/config.json
@@ -15,7 +15,7 @@
       ]
    },
    "language_version": ">=8.1",
-   "blurb": "Practice type juggling while helping your friend Kojo with his website www.fun-with-numbers.com.",
+   "blurb": "Practice type juggling while helping your friend Kojo with his website.",
    "forked_from": [
       "javascript/lucky-numbers"
    ]
