--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "squizlabs/php_codesniffer": "^3.8"
   },
   "scripts": {
-    "lint:check": "./vendor/bin/phpcs --ignore=*/hello-world/*,*/concept/* --standard=phpcs-php.xml ./exercises",
-    "lint:fix": "./vendor/bin/phpcbf --standard=phpcs-php.xml ./exercises"
+    "lint:check": "phpcs --standard=phpcs-php.xml",
+    "lint:fix": "phpcbf --standard=phpcs-php.xml"
   }
 }
