--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,13 @@
   },
   "require-dev": {
     "php": "^7.4|^8.0",
+    "phpunit/phpunit": "^9.6",
     "slevomat/coding-standard": "^8.14.1",
     "squizlabs/php_codesniffer": "^3.8"
   },
   "scripts": {
     "lint:check": "phpcs --standard=phpcs-php.xml",
-    "lint:fix": "phpcbf --standard=phpcs-php.xml"
+    "lint:fix": "phpcbf --standard=phpcs-php.xml",
+    "tests:run": "PHPUNIT_BIN='phpunit' bin/test.sh"
   }
 }
