--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "squizlabs/php_codesniffer": "^3.8"
   },
   "scripts": {
-    "lint:check": "phpcs -v",
+    "lint:check": "phpcs",
     "lint:fix": "phpcbf",
     "tests:run": "PHPUNIT_BIN='phpunit' bin/test.sh"
   }
