Better concept blurb, add contributor

--- a/concepts/basic-syntax/.meta/config.json
+++ b/concepts/basic-syntax/.meta/config.json
@@ -1,5 +1,5 @@
 {
-  "blurb": "`basic syntax` concept in PHP",
+  "blurb": "Structure and basic syntax of programs in PHP",
   "authors": ["neenjaw"],
-  "contributors": []
+  "contributors": ["mk-mxp"]
 }
