--- a/config.json
+++ b/config.json
@@ -932,6 +932,14 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2
+      },
+      {
+        "slug": "list-ops",
+        "name": "List Ops",
+        "uuid": "56f36086-96a8-4941-8c46-b563f02e5b09",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 7
       }
     ]
   },
