--- a/exercises/practice/roman-numerals/.meta/config.json
+++ b/exercises/practice/roman-numerals/.meta/config.json
@@ -21,7 +21,7 @@
       ".meta/example.php"
     ]
   },
-  "blurb": "Write a function to convert from normal numbers to Roman Numerals.",
+  "blurb": "Convert modern Arabic numbers into Roman numerals.",
   "source": "The Roman Numeral Kata",
-  "source_url": "https://codingdojo.org/kata/RomanNumerals"
+  "source_url": "https://codingdojo.org/kata/RomanNumerals/"
 }
