--- a/exercises/practice/list-ops/.meta/tests.toml
+++ b/exercises/practice/list-ops/.meta/tests.toml
@@ -51,14 +51,17 @@ description = "return a list of elements whose values equal the list value trans
 [613b20b7-1873-4070-a3a6-70ae5f50d7cc]
 description = "folds (reduces) the given list from the left with a function -> empty list"
 include = false
+comment = "Re-implemented in 36549237-f765-4a4c-bfd9-5d3a8f7b07d2"
 
 [e56df3eb-9405-416a-b13a-aabb4c3b5194]
 description = "folds (reduces) the given list from the left with a function -> direction independent function applied to non-empty list"
 include = false
+comment = "Re-implemented in 7a626a3c-03ec-42bc-9840-53f280e13067"
 
 [d2cf5644-aee1-4dfc-9b88-06896676fe27]
 description = "folds (reduces) the given list from the left with a function -> direction dependent function applied to non-empty list"
 include = false
+comment = "Re-implemented in d7fcad99-e88e-40e1-a539-4c519681f390"
 
 [36549237-f765-4a4c-bfd9-5d3a8f7b07d2]
 description = "folds (reduces) the given list from the left with a function -> empty list"
@@ -75,14 +78,17 @@ reimplements = "d2cf5644-aee1-4dfc-9b88-06896676fe27"
 [aeb576b9-118e-4a57-a451-db49fac20fdc]
 description = "folds (reduces) the given list from the right with a function -> empty list"
 include = false
+comment = "Re-implemented in 17214edb-20ba-42fc-bda8-000a5ab525b0"
 
 [c4b64e58-313e-4c47-9c68-7764964efb8e]
 description = "folds (reduces) the given list from the right with a function -> direction independent function applied to non-empty list"
 include = false
+comment = "Re-implemented in e1c64db7-9253-4a3d-a7c4-5273b9e2a1bd"
 
 [be396a53-c074-4db3-8dd6-f7ed003cce7c]
 description = "folds (reduces) the given list from the right with a function -> direction dependent function applied to non-empty list"
 include = false
+comment = "Re-implemented in 8066003b-f2ff-437e-9103-66e6df474844"
 
 [17214edb-20ba-42fc-bda8-000a5ab525b0]
 description = "folds (reduces) the given list from the right with a function -> empty list"
