--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,13 @@
   },
   "require-dev": {
     "php": "^7.4|^8.0",
+    "phpunit/phpunit": "^9.6",
     "slevomat/coding-standard": "^8.14.1",
-    "squizlabs/php_codesniffer": "^3.8"
+    "squizlabs/php_codesniffer": "^3.9"
   },
   "scripts": {
-    "lint:check": "./vendor/bin/phpcs --ignore=*/hello-world/*,*/concept/* --standard=phpcs-php.xml ./exercises",
-    "lint:fix": "./vendor/bin/phpcbf --standard=phpcs-php.xml ./exercises"
+    "lint:check": "phpcs",
+    "lint:fix": "phpcbf",
+    "tests:run": "PHPUNIT_BIN='phpunit' bin/test.sh"
   }
 }
