Auto format all files with configlet

--- a/exercises/concept/lucky-numbers/.meta/config.json
+++ b/exercises/concept/lucky-numbers/.meta/config.json
@@ -1,22 +1,20 @@
 {
-   "authors": [
-      "mk-mxp"
-   ],
-   "contributors": [],
-   "files": {
-      "solution": [
-         "LuckyNumbers.php"
-      ],
-      "test": [
-         "LuckyNumbersTest.php"
-      ],
-      "exemplar": [
-         ".meta/exemplar.php"
-      ]
-   },
-   "language_version": ">=8.1",
-   "blurb": "Practice type juggling while helping your friend Kojo with his website.",
-   "forked_from": [
-      "javascript/lucky-numbers"
-   ]
+  "authors": [
+    "mk-mxp"
+  ],
+  "files": {
+    "solution": [
+      "LuckyNumbers.php"
+    ],
+    "test": [
+      "LuckyNumbersTest.php"
+    ],
+    "exemplar": [
+      ".meta/exemplar.php"
+    ]
+  },
+  "forked_from": [
+    "javascript/lucky-numbers"
+  ],
+  "blurb": "Practice type juggling while helping your friend Kojo with his website."
 }
