--- a/exercises/practice/alphametics/.meta/config.json
+++ b/exercises/practice/alphametics/.meta/config.json
@@ -1,10 +1,17 @@
 {
-  "blurb": "Write a function to solve alphametics puzzles.",
-  "authors": ["MichaelBunker"],
-  "contributors": [],
+  "authors": [
+    "MichaelBunker"
+  ],
   "files": {
-    "solution": ["Alphametics.php"],
-    "test": ["AlphameticsTest.php"],
-    "example": [".meta/example.php"]
-  }
+    "solution": [
+      "Alphametics.php"
+    ],
+    "test": [
+      "AlphameticsTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
+  },
+  "blurb": "Write a function to solve alphametics puzzles."
 }
