--- a/exercises/practice/say/.meta/config.json
+++ b/exercises/practice/say/.meta/config.json
@@ -1,10 +1,17 @@
 {
-  "blurb": "Given a number from 0 to 999,999,999,999, spell out that number in English.",
-  "authors": ["vnkmpf"],
-  "contributors": [],
+  "authors": [
+    "vnkmpf"
+  ],
   "files": {
-    "solution": ["Say.php"],
-    "test": ["SayTest.php"],
-    "example": [".meta/example.php"]
-  }
+    "solution": [
+      "Say.php"
+    ],
+    "test": [
+      "SayTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
+  },
+  "blurb": "Given a number from 0 to 999,999,999,999, spell out that number in English."
 }
