--- a/exercises/practice/twelve-days/.meta/config.json
+++ b/exercises/practice/twelve-days/.meta/config.json
@@ -1,10 +1,17 @@
 {
-  "blurb": "Output the lyrics to 'The Twelve Days of Christmas'.",
-  "authors": ["MichaelBunker"],
-  "contributors": [],
+  "authors": [
+    "MichaelBunker"
+  ],
   "files": {
-    "solution": ["TwelveDays.php"],
-    "test": ["TwelveDaysTest.php"],
-    "example": [".meta/example.php"]
-  }
+    "solution": [
+      "TwelveDays.php"
+    ],
+    "test": [
+      "TwelveDaysTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
+  },
+  "blurb": "Output the lyrics to 'The Twelve Days of Christmas'."
 }
