--- a/exercises/practice/yacht/.meta/config.json
+++ b/exercises/practice/yacht/.meta/config.json
@@ -1,10 +1,17 @@
 {
-  "blurb": "Score a single throw of dice in the game Yacht.",
-  "authors": ["MichaelBunker"],
-  "contributors": [],
+  "authors": [
+    "MichaelBunker"
+  ],
   "files": {
-    "solution": ["Yacht.php"],
-    "test": ["YachtTest.php"],
-    "example": [".meta/example.php"]
-  }
+    "solution": [
+      "Yacht.php"
+    ],
+    "test": [
+      "YachtTest.php"
+    ],
+    "example": [
+      ".meta/example.php"
+    ]
+  },
+  "blurb": "Score a single throw of dice in the game Yacht."
 }
