--- a/config.json
+++ b/config.json
@@ -1171,6 +1171,14 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 7
+      },
+      {
+        "slug": "circular-buffer",
+        "name": "Circular Buffer",
+        "uuid": "3f077d57-472a-469a-885d-ebc6aaccd3d7",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 6
       }
     ]
   },
