Ran bin/configlet fmt --update --yes

--- a/exercises/practice/circular-buffer/.meta/config.json
+++ b/exercises/practice/circular-buffer/.meta/config.json
@@ -1,5 +1,7 @@
 {
-  "authors": ["tomasnorre"],
+  "authors": [
+    "tomasnorre"
+  ],
   "files": {
     "solution": [
       "CircularBuffer.php"
