Foregone parallel-letter-frequency exercise
PHP is not realy made for multithread. Fibers are new and rarely used.

--- a/config.json
+++ b/config.json
@@ -1236,6 +1236,9 @@
         "prerequisites": [],
         "difficulty": 5
       }
+    ],
+    "foregone": [
+      "parallel-letter-frequency"
     ]
   },
   "concepts": [
