--- a/.github/workflows/exercise-tests-phpunit-9.yml
+++ b/.github/workflows/exercise-tests-phpunit-9.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         php-version: [8.0, 8.1, 8.2]
         # os: [ubuntu-22.04, windows-2022, macOS-12]
-        os: [ubuntu-22.04, windows-2022]
+        os: [ubuntu-22.04, windows-2022, macOS-13]
 
     steps:
       - name: Set git line endings
