--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,11 @@
         "@lint:check",
         "@tests:run"
     ],
-    "configlet:fmt": "bin/configlet fmt",
+    "tool:configlet:error": "[ -x bin/configlet ] || ( echo 'Fetch configlet first! Run: \"bin/fetch-configlet\"'; false )",
+    "configlet:fmt": [
+        "@tool:configlet:error",
+        "bin/configlet fmt"
+    ],
     "format:fix": [
         "@lint:fix",
         "@configlet:fmt"
