Don't fetch configlet on update, too.
This might be the problem why it didn't work as expected. No
'composer.lock' -> 'composer update' is run.

--- a/.github/workflows/exercise-lint-phpcs-psr-12.yml
+++ b/.github/workflows/exercise-lint-phpcs-psr-12.yml
@@ -27,7 +27,7 @@ jobs:
           tools: composer
 
       - name: Install composer packages
-        run: CI="true" composer install
+        run: composer install
 
       - name: Lint exercises
         shell: bash
