--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   },
   "require-dev": {
-    "php": "^8.0",
+    "php": "^7.4 || ^8.0",
     "phpunit/phpunit": "^9.6 || ^10.5",
     "slevomat/coding-standard": "^8.14.1",
     "squizlabs/php_codesniffer": "^3.9"
