--- a/.github/workflows/exercise-tests-phpunit-10.yml
+++ b/.github/workflows/exercise-tests-phpunit-10.yml
@@ -5,14 +5,12 @@ on:
   push:
     branches:
       - main
-      - master
   pull_request:
 
 jobs:
   test:
     name: PHP ${{ matrix.php-version }} - ${{ matrix.os }} - ${{ github.event_name }}
     runs-on: ${{ matrix.os }}
-    continue-on-error: true
     strategy:
       fail-fast: false
       matrix:
@@ -41,7 +39,8 @@ jobs:
           curl -Lo ./bin/phpunit-10.phar https://phar.phpunit.de/phpunit-10.phar
           chmod +x bin/phpunit-10.phar
 
-      - name: Test exercises\
+      - name: Test exercises
+        continue-on-error: true
         shell: bash
         env:
           PHPUNIT_BIN: 'bin/phpunit-10.phar'
