Disable XDEBUG in testing

--- a/.github/workflows/exercise-tests-phpunit-10.yml
+++ b/.github/workflows/exercise-tests-phpunit-10.yml
@@ -44,4 +44,5 @@ jobs:
         shell: bash
         env:
           PHPUNIT_BIN: 'bin/phpunit-10.phar'
+          XDEBUG_MODE: off
         run: bin/test.sh
