--- a/.github/workflows/exercise-lint-phpcs-psr-12.yml
+++ b/.github/workflows/exercise-lint-phpcs-psr-12.yml
@@ -27,7 +27,7 @@ jobs:
           tools: composer
 
       - name: Install composer packages
-        run: composer install
+        run: composer install --no-scripts
 
       - name: Lint exercises
         shell: bash
