Add me to contributors

--- a/exercises/practice/difference-of-squares/.meta/config.json
+++ b/exercises/practice/difference-of-squares/.meta/config.json
@@ -7,7 +7,8 @@
     "kytrinyx",
     "lafent",
     "petemcfarlane",
-    "Scientifica96"
+    "Scientifica96",
+    "mk-mxp"
   ],
   "files": {
     "solution": [
