--- a/exercises/practice/minesweeper/.meta/config.json
+++ b/exercises/practice/minesweeper/.meta/config.json
@@ -19,5 +19,5 @@
       ".meta/example.php"
     ]
   },
-  "blurb": "Add the numbers to a minesweeper board"
+  "blurb": "Add the numbers to a minesweeper board."
 }
