All PHP versions and OSses in PHPUnit 10 workflow

--- a/.github/workflows/exercise-tests-phpunit-10.yml
+++ b/.github/workflows/exercise-tests-phpunit-10.yml
@@ -14,10 +14,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        #php-version: [8.1, 8.2, 8.3]
-        php-version: [8.3]
-        #os: [ubuntu-22.04, windows-2022, macOS-12]
-        os: [ubuntu-22.04]
+        php-version: [8.1, 8.2, 8.3]
+        os: [ubuntu-22.04, windows-2022, macOS-14]
 
     steps:
       - name: Set git line endings
