--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     }
   },
   "require-dev": {
-    "php": "^8.0",
-    "phpunit/phpunit": "^9.6 || ^10.5",
+    "php": "^8.1",
+    "phpunit/phpunit": "^10.5",
     "slevomat/coding-standard": "^8.14.1",
     "squizlabs/php_codesniffer": "^3.9"
   },
