--- a/config.json
+++ b/config.json
@@ -1127,6 +1127,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 4,
+        "status": "deprecated",
         "topics": [
           "conditionals",
           "strings"
