Sync the `bank-account` exercise's metadata with the latest data.

--- a/exercises/practice/bank-account/.meta/config.json
+++ b/exercises/practice/bank-account/.meta/config.json
@@ -13,5 +13,5 @@
       ".meta/example.php"
     ]
   },
-  "blurb": "Simulate a bank account supporting opening/closing, withdraws, and deposits of money."
+  "blurb": "Simulate a bank account supporting opening/closing, withdraws, and deposits of money. Watch out for concurrent transactions!"
 }
