Change: Removed `unicode` test case and also update `test.toml`

--- a/exercises/practice/anagram/.meta/tests.toml
+++ b/exercises/practice/anagram/.meta/tests.toml
@@ -84,3 +84,4 @@ description = "handles case of greek letters"
 
 [fd3509e5-e3ba-409d-ac3d-a9ac84d13296]
 description = "different characters may have the same bytes"
+include = false
