--- a/exercises/practice/acronym/.meta/tests.toml
+++ b/exercises/practice/acronym/.meta/tests.toml
@@ -25,6 +25,11 @@ description = "consecutive delimiters"
 
 [5118b4b1-4572-434c-8d57-5b762e57973e]
 description = "apostrophes"
+included = false
+comment = "This invalidates existing solutions that rely on RegExp word boundary detection"
 
 [adc12eab-ec2d-414f-b48c-66a4fc06cdef]
 description = "underscore emphasis"
+included = false
+comment = "This also invalidates existing solutions that rely on RegExp word boundary detection"
+
