Rename exercise title to Annalyn's Infiltration (apostrophe added) (exercism#758)

--- a/config.json
+++ b/config.json
@@ -72,7 +72,7 @@
       },
       {
         "slug": "annalyns-infiltration",
-        "name": "Annalyns Infiltration",
+        "name": "Annalyn's Infiltration",
         "uuid": "18c47e7b-fb34-4d00-b693-a3a5917e5f15",
         "concepts": [
           "booleans"
