--- a/exercises/practice/grade-school/.meta/config.json
+++ b/exercises/practice/grade-school/.meta/config.json
@@ -20,7 +20,6 @@
       ".meta/example.php"
     ]
   },
-  "blurb": "Given students' names along with the grade that they are in, create a roster for the school",
-  "source": "A pairing session with Phil Battos at gSchool",
-  "source_url": "https://gschool.it"
+  "blurb": "Given students' names along with the grade that they are in, create a roster for the school.",
+  "source": "A pairing session with Phil Battos at gSchool"
 }
