--- a/config.json
+++ b/config.json
@@ -389,6 +389,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
+        "status": "deprecated",
         "topics": [
           "extension_methods",
           "sequences",
@@ -450,6 +451,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
+        "status": "deprecated",
         "topics": [
           "algorithms",
           "text_formatting"
@@ -462,6 +464,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
+        "status": "deprecated",
         "topics": [
           "math"
         ]
@@ -717,6 +720,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
+        "status": "deprecated",
         "topics": [
           "math"
         ]
