--- a/exercises/practice/alphametics/.meta/config.json
+++ b/exercises/practice/alphametics/.meta/config.json
@@ -13,5 +13,5 @@
       ".meta/example.php"
     ]
   },
-  "blurb": "Write a function to solve alphametics puzzles."
+  "blurb": "Given an alphametics puzzle, find the correct solution."
 }
