sync binary-search-tree

--- a/exercises/practice/binary-search-tree/.meta/config.json
+++ b/exercises/practice/binary-search-tree/.meta/config.json
@@ -13,5 +13,6 @@
       ".meta/example.php"
     ]
   },
-  "blurb": "Insert and search for numbers in a binary tree."
+  "blurb": "Insert and search for numbers in a binary tree.",
+  "source": "Josh Cheek"
 }
