--- a/exercises/practice/bowling/.meta/config.json
+++ b/exercises/practice/bowling/.meta/config.json
@@ -20,7 +20,7 @@
       ".meta/example.php"
     ]
   },
-  "blurb": "Score a bowling game",
-  "source": "The Bowling Game Kata at but UncleBob",
-  "source_url": "https://butunclebob.com/ArticleS.UncleBob.TheBowlingGameKata"
+  "blurb": "Score a bowling game.",
+  "source": "The Bowling Game Kata from UncleBob",
+  "source_url": "https://web.archive.org/web/20221001111000/http://butunclebob.com/ArticleS.UncleBob.TheBowlingGameKata"
 }
