--- a/exercises/practice/change/.meta/config.json
+++ b/exercises/practice/change/.meta/config.json
@@ -21,7 +21,7 @@
       ".meta/example.php"
     ]
   },
-  "blurb": "Correctly determine change to be given using the least number of coins",
+  "blurb": "Correctly determine change to be given using the least number of coins.",
   "source": "Software Craftsmanship - Coin Change Kata",
-  "source_url": "https://web.archive.org/web/20130115115225/https://craftsmanship.sv.cmu.edu:80/exercises/coin-change-kata"
+  "source_url": "https://web.archive.org/web/20130115115225/http://craftsmanship.sv.cmu.edu:80/exercises/coin-change-kata"
 }
