--- a/exercises/practice/connect/.meta/config.json
+++ b/exercises/practice/connect/.meta/config.json
@@ -23,5 +23,5 @@
       ".meta/example.php"
     ]
   },
-  "blurb": "Compute the result for a game of Hex / Polygon"
+  "blurb": "Compute the result for a game of Hex / Polygon."
 }
