--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "exercism/php",
   "autoload": {
-    "Exercism\\": "src",
+    "Exercism\\Sniffs\\": "src/Exercism/Sniffs",
     "Exercism\\Exercises\\": "exercises"
   },
   "config": {
@@ -13,7 +13,7 @@
     "php": "^8.1",
     "phpunit/phpunit": "^10.5",
     "slevomat/coding-standard": "^8.14.1",
-    "squizlabs/php_codesniffer": "^3.9"
+    "squizlabs/php_codesniffer": "^3.11.1"
   },
   "scripts": {
     "post-install-cmd": [
