--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "exercism/php",
   "autoload": {
-    "Exercism\\Sniffs\\": "src/Exercism/Sniffs",
+    "Exercism\\": "src/Exercism",
     "Exercism\\Exercises\\": "exercises"
   },
   "config": {
