--- a/exercises/practice/change/.meta/config.json
+++ b/exercises/practice/change/.meta/config.json
@@ -8,7 +8,8 @@
     "kunicmarko20",
     "kytrinyx",
     "leNEKO",
-    "neenjaw"
+    "neenjaw",
+    "tomasnorre"
   ],
   "files": {
     "solution": [
