--- a/exercises/practice/clock/.meta/config.json
+++ b/exercises/practice/clock/.meta/config.json
@@ -8,7 +8,8 @@
     "kunicmarko20",
     "kytrinyx",
     "lafent",
-    "petemcfarlane"
+    "petemcfarlane",
+    "tomasnorre"
   ],
   "files": {
     "solution": [
