--- a/exercises/practice/collatz-conjecture/.meta/config.json
+++ b/exercises/practice/collatz-conjecture/.meta/config.json
@@ -7,7 +7,8 @@
     "G-Rath",
     "kunicmarko20",
     "kytrinyx",
-    "neenjaw"
+    "neenjaw",
+    "tomasnorre"
   ],
   "files": {
     "solution": [
