--- a/exercises/practice/eliuds-eggs/.meta/config.json
+++ b/exercises/practice/eliuds-eggs/.meta/config.json
@@ -2,6 +2,9 @@
   "authors": [
     "homersimpsons"
   ],
+  "contributors": [
+    "tomasnorre"
+  ],
   "files": {
     "solution": [
       "EliudsEggs.php"
