--- a/exercises/practice/run-length-encoding/.meta/config.json
+++ b/exercises/practice/run-length-encoding/.meta/config.json
@@ -5,7 +5,8 @@
   "contributors": [
     "arueckauer",
     "kytrinyx",
-    "neenjaw"
+    "neenjaw",
+    "tomasnorre"
   ],
   "files": {
     "solution": [
