--- a/exercises/practice/alphametics/.meta/config.json
+++ b/exercises/practice/alphametics/.meta/config.json
@@ -2,6 +2,9 @@
   "authors": [
     "MichaelBunker"
   ],
+  "contributors": [
+    "tomasnorre"
+  ],
   "files": {
     "solution": [
       "Alphametics.php"
