--- a/exercises/practice/armstrong-numbers/.meta/config.json
+++ b/exercises/practice/armstrong-numbers/.meta/config.json
@@ -4,7 +4,8 @@
   ],
   "contributors": [
     "arueckauer",
-    "neenjaw"
+    "neenjaw",
+    "tomasnorre"
   ],
   "files": {
     "solution": [
