--- a/exercises/practice/book-store/.meta/config.json
+++ b/exercises/practice/book-store/.meta/config.json
@@ -5,7 +5,8 @@
   "contributors": [
     "arueckauer",
     "kytrinyx",
-    "petemcfarlane"
+    "petemcfarlane",
+    "tomasnorre"
   ],
   "files": {
     "solution": [
