--- a/exercises/practice/grade-school/.meta/config.json
+++ b/exercises/practice/grade-school/.meta/config.json
@@ -7,7 +7,8 @@
     "kunicmarko20",
     "kytrinyx",
     "petemcfarlane",
-    "rossbearman"
+    "rossbearman",
+    "tomasnorre"
   ],
   "files": {
     "solution": [
