--- a/exercises/practice/isogram/.meta/config.json
+++ b/exercises/practice/isogram/.meta/config.json
@@ -6,7 +6,8 @@
     "arueckauer",
     "kunicmarko20",
     "kytrinyx",
-    "petemcfarlane"
+    "petemcfarlane",
+    "tomasnorre"
   ],
   "files": {
     "solution": [
