--- a/.github/workflows/configlet-generate.yml
+++ b/.github/workflows/configlet-generate.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+        with:
+          ref: ${{ github.head_ref }}
 
       - name: Fetch configlet
         uses: exercism/github-actions/configlet-ci@main
